Sync up to latest aries-vcx main 62.0.1+
Signed-off-by: Patrik Stas <patrik.stas@absa.africa>

--- a/aries-backchannels/aries-vcx/Cargo.toml
+++ b/aries-backchannels/aries-vcx/Cargo.toml
@@ -14,11 +14,12 @@ rand = "0.8.5"
 serde = "1.0.97"
 serde_json = "1.0.40"
 serde_derive = "1.0.97"
-log = "0.4.17"
+log = "^0.4.20"
 env_logger = "0.9.1"
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
-# aries-vcx-agent = { git = "https://github.com/hyperledger/aries-vcx.git", rev = "a9d9e827add1fd42372281ba2413c56ca519e532" }
-aries-vcx-agent = { path = "/Users/ab006rh/Source/aries-vcx/agents/rust/aries-vcx-agent" }
+aries-vcx-agent = { git = "https://github.com/hyperledger/aries-vcx.git", rev = "e88b70e601" }
+#aries-vcx-agent = { path = "/Users/ab006rh/Source/aries-vcx/agents/rust/aries-vcx-agent" }
+anoncreds_types = { git = "https://github.com/hyperledger/aries-vcx.git", rev = "e88b70e601" }
 
 [profile.release]
 debug = 0
